adding changes to read me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Shriya Dikshith &#124; Data Scientist</title>
+    <title> Shriya Dikshith &#124;</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Shriya Dikshith | Data Scientist" />
     <meta name="keywords" content="Shriya Dikshith | Data Engineer" />
