--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <h3>Professional <span class="type casls"> </span></h3>
                            <p>Programming is my passion, especially when it comes to data. I love harnessing the power of data analytics and data science to derive insights and drive decision-making. I excel at explaining complex data concepts in a simple and understandable manner.</p>
 
-                            <p>Data analysis and development are not just my profession but my passion. I delve deeply into understanding clients' needs and problems, aiming to provide tailored data solutions. My mission is to satisfy every client and continually improve my skills by learning new techniques and updates every day. I promise lifetime support and am committed to providing fanatical support and absolutely on-time delivery. </p>
+                            <p> Data analysis and development are not just my profession but my passion. I delve deeply into understanding needs and problems, aiming to provide tailored data solutions. My mission is to satisfy every requirement and continually improve my skills by learning new techniques and updates every day. I promise lifetime support and am committed to providing fanatical support and absolutely on-time delivery. </p>
                             <div class="home-buttons">
                                 <a href="./document/my-cv.pdf" type="button" target="_blank" class="btn btn-primary"><i class="fas fa-download"></i> Download CV</a>
                                 <!-- <a href="https://www.fiverr.com/trustedperson75" class="btn btn-primary btn-contact"><i class="fas fa-deaf" ></i>  Hire Me</a> -->
