--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                             <div class="single_project position-relative  rounded  shadow overflow-hidden" style="visibility: visible; animation-name: slideInLeft;">
                                                 <img src="assets/img/portfolio/device.jpeg" alt="Project Photo" class="w-100 d-block rounded">
                                                 <a href="assets/img/portfolio/device.jpeg" data-fancybox="gallery" class="expand_btn"><img src="img/p1.png" class="d-none"></a>
-                                                <a href="https://drive.google.com/file/d/1H2tJZ7zRByIv1UYAjnhxxLW71nkgfZsa/view?usp=sharing" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
+                                                <a href="https://github.com/shriya5dxt/Device-failure-prediction" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
                                                 <div class="overlay text-center d-flex align-items-center justify-content-center">
                                                     <div class="over_cont">
                                                         <h5 class="text-white">Device Failure Prediction</h5>
