--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <div class="single_project position-relative  rounded  shadow overflow-hidden" style="visibility: visible; animation-name: slideInLeft;">
                                 <img src="assets/img/saayaHealthLogo.png" alt="Project Photo" class="w-100 d-block rounded">
                                 <a href="assets/img/saayaHealthLogo.png" data-fancybox="gallery " class="expand_btn "><img src="img/p1.png " class="d-none "></a>
-            <a href="https://github.com/shriyadxt/Data-Science-Tools-and-Engineering-Methods/blob/master/Python_Verbatim_Analysis.ipynb" target="_blank " class="project_link btns btn-outline-light position-absolute text-white "><i class="fas fa-link "></i></a>
+            <a href="https://github.com/shriyadxt/Python_Verbatim_Analysis/tree/master" target="_blank " class="project_link btns btn-outline-light position-absolute text-white "><i class="fas fa-link "></i></a>
             <div class="overlay text-center d-flex align-items-center justify-content-center ">
                 <div class="over_cont ">
                     <h5 class="text-white ">Amazon reviews sentiment analysis  </h5>
@@ -145,7 +145,7 @@
                             <div class="single_project position-relative  rounded  shadow overflow-hidden" style="visibility: visible; animation-name: slideInLeft;">
                                 <img src="assets/img/storybook.png" alt="Project Photo" class="w-100 d-block rounded">
                                 <a href="assets/img/storybook.png" data-fancybox="gallery" class="expand_btn"><img src="img/p1.png" class="d-none"></a>
-                                <a href="https://github.com/shriyadxt/Data-Science-Tools-and-Engineering-Methods/blob/master/Movie%20Storybook.ipynb" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
+                                <a href="https://github.com/shriyadxt/Movie-Storybook" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
                                 <div class="overlay text-center d-flex align-items-center justify-content-center">
                                     <div class="over_cont">
                                         <h5 class="text-white">Movie Storybook </h5>
