adding new resume

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="project">
                             <div class="single_project position-relative  rounded  shadow overflow-hidden" style="visibility: visible; animation-name: slideInLeft;">
                                 <img src="assets/img/portfolio/customer.png" alt="Project Photo" class="w-100 d-block rounded">
-                                <a href="assets/img/portfolio/customer.png" data-fancybox="gallery" class="expand_btn"><img src="img/p1.png" class="d-none"></a>
+                                <a href="assets/img/portfolio/customer.png" data-fancybox="gallery" class="expand_btn"><img src="img/hosp.jpg" class="d-none"></a>
                                 <a href="https://github.com/shriyadxt/ML-for-Hospital-EfficiencyML-for-Hospital-Efficiency/tree/master" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
                                 <div class="overlay text-center d-flex align-items-center justify-content-center">
                                     <div class="over_cont">
