adding new image name

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                      <div class="col-xl-4 col-sm-6 mix  dg">
                         <div class="project">
                             <div class="single_project position-relative  rounded  shadow overflow-hidden" style="visibility: visible; animation-name: slideInLeft;">
-                                <img src="assets/img/portfolio/hosp.jpg" alt="Project Photo" class="w-100 d-block rounded">
-                                <a href="assets/img/portfolio/hosp.jpg" data-fancybox="gallery" class="expand_btn"><img src="img/p1.png" class="d-none"></a>
+                                <img src="assets/img/portfolio/hosp.png" alt="Project Photo" class="w-100 d-block rounded">
+                                <a href="assets/img/portfolio/hosp.png" data-fancybox="gallery" class="expand_btn"><img src="img/p1.png" class="d-none"></a>
                                 <a href="https://github.com/shriyadxt/ML-for-Hospital-EfficiencyML-for-Hospital-Efficiency/tree/master" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
                                 <div class="overlay text-center d-flex align-items-center justify-content-center">
                                     <div class="over_cont">
