adding new image name

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <a href="https://github.com/shriyadxt/ML-for-Hospital-EfficiencyML-for-Hospital-Efficiency/tree/master" target="_blank" class="project_link btns btn-outline-light position-absolute text-white"><i class="fas fa-link"></i></a>
                                 <div class="overlay text-center d-flex align-items-center justify-content-center">
                                     <div class="over_cont">
-                                        <h5 class="text-white">ML-for-Hospital-EfficiencyML-for-Hospital-Efficiency</h5>
+                                        <h5 class="text-white">ML for Hospital Efficiency</h5>
                                         <p class="text-white"> This project focuses on predicting the length of stay for patients in a hospital using machine learning techniques.</p>
                                   
                                     </div>
