--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                 <ul class="list-unstyled">
                                     <li class="paragraph mt-4 mb-3">
-                                        <a href="my-cv.pdf" type="button" target="_blank" class="btn btn-primary"><i class="fas fa-download"></i> Download CV</a>
+                                        <a href="./document/my-cv.pdf" type="button" target="_blank" class="btn btn-primary"><i class="fas fa-download"></i> Download CV</a>
                                     </li>
                                 </ul>
                             </div>
